# py-chess-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff.yml
src/: __main__.py  board.py  engine.py  pieces.py  test_runner.py  ui.py  util.py
src/chess_ai/: cli.py
src/chess_ai/domain/: board.py  pieces.py
src/chess_ai/util/: cell.py
tests/: bishop.board  king.board  knight.board  movement_test.json  pawn.board  queen.board  random1.board  random2.board  rook.board  test_.py
